--- a/text/parts/appendix.tex
+++ b/text/parts/appendix.tex
@@ -1,7 +1,5 @@
 \appendix
 %\begin{appendices}
-\chapter{Python skript pro vyhodnocování stop}
+\chapter{Python skript pro vyhodnocování stop}\label{sec:priloha_skript}
 \lstinputlisting[language=Python]{import.py}
-
-
 %\end{appendices}
