--- a/text/parts/praktickaCast.tex
+++ b/text/parts/praktickaCast.tex
@@ -1,24 +1,10 @@
 \chapter{Vyhodnocení detektorů stop v pevné fázi (praktická část)}
 \section{Metodika}\label{sec:praktickaCast_metodika}
-NPI používá materiál HARZLAS TD-1 (výrobce Nagase Landauer Ltd.) a od roku 2016 i TASTRAK (výrobce Track Analysis Systems Ltd.)~\cite{cesky}. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je kolem 15,3 $\mu$m. Velikost analyzované plochy se volí tak, aby bylo vyšetřeno alespoň tisíc stop (kvůli zajištění dostatečné statistiky). Detektor je tlustý 0.9 mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým $\mathit{LET}$; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším $\mathit{LET}$. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
-detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 7,5/20,1 $\mu$m; velikost analyzované plochy TASTRAKu se volí stejným kritériem jako u HARZLAS TD-1. Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000,~\cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit.
+NPI používá materiál HARZLAS TD-1 (výrobce Fukuvi chemical, dodavatel Nagase Landauer Ltd.) a od roku 2016 i TASTRAK (výrobce Track Analysis Systems Ltd.)~\cite{cesky}. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je kolem 15,3 $\mu$m. Velikost analyzované plochy se volí tak, aby bylo vyšetřeno alespoň tisíc stop (kvůli zajištění dostatečné statistiky). Detektor je tlustý 0.9 mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým $\mathit{LET}$; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším $\mathit{LET}$. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
+detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 7,5/20,1 $\mu$m; velikost analyzované plochy TASTRAKu se volí stejným kritériem jako u HARZLAS TD-1. Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000~\cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit~\cite{hspClanek}.
 
-Zatímco HARZLAS TD-1 detekuje částice s $\LET$ vyšším než 7 keV/$\mu$m, TASTRAK má detekční práh 20 keV/$\mu$m~\cite{cesky,thesisKPBrabcova}. Na druhou stranu TASTRAK má vyšší rozsah měřitelných $\LET$ a díky leptání per partes detekuje s mnohem větší účinností částice s vyšším $\LET$ než HARZLAS TD-1~\cite{cesky}.
+Zatímco HARZLAS TD-1 detekuje částice s $\LET$ vyšším než 7 keV/$\mu$m~\cite{cesky}, TASTRAK má detekční práh kolem 15 keV/$\mu$m, resp. 10 keV/$\mu$m~\cite{ssntd} pro kratší, resp. delší leptání; detekční práh TASTRAKu pro kratší leptání byl určen z detektorů, jejichž vyhodnocení je popsáno v dalším oddíle. Na druhou stranu TASTRAK má vyšší rozsah měřitelných $\LET$ a díky leptání per partes detekuje s mnohem větší účinností částice s vyšším $\LET$ než HARZLAS TD-1~\cite{cesky}.
 \newpage
-%V tab. \ref{tab:praktickaCast_rozsahyLET} jsou rozsahy měřitelných $\LET$, tj. částice s $\LET$ v tomto intervalu můžeme zahrnout do výpočtů dávky, $\LET$ spektra atd.
-%\begin{table}[H]
-  %\centering
-  %\caption{Rozsah měřitelných $\LET$ daného detektoru.~\cite{thesisKPBrabcova, cesky}}
-  %\label{tab:praktickaCast_rozsahyLET}
-  %\begin{tabular}{lll}
-	%\toprule
-	%Materiál & Rozsah $\LET$ [keV/$\mu$m]\\
-	%\midrule
-	%HARZLAS TD-1& 7 -- 340\\
-	%TASTRAK& 20 -- 450\\
-	%\bottomrule
-  %\end{tabular}
-%\end{table}
 \section{Vyhodnocení}
 \begin{wrapfigure}{r}{0.42\textwidth}
 %\begin{figure}[h]
@@ -31,7 +17,7 @@ Zatímco HARZLAS TD-1 detekuje částice s $\LET$ vyšším než 7 keV/$\mu$m, T
   \vspace{-10pt}
 %\end{figure}
 \end{wrapfigure}
-V praktické části bakalářské práce jsem vyhodnotil tři detektory stop osmé sady experimentu DOSIS3D. Detektory byly umístěny v prvním, druhém a třetím PDP. Jedná se o detektory z materiálu TASTRAK, které byly leptány 6 hodin, tj. zobrazené stopy jsou původem od částic s krátkým dosahem a vyšším LET.
+V praktické části bakalářské práce jsem vyhodnotil tři detektory stop osmé sady experimentu DOSIS3D. Detektory byly umístěny v prvním, druhém a třetím PDP. Jedná se o detektory z materiálu TASTRAK, které byly leptány 6 hodin, tj. zobrazené stopy jsou původem od částic s vyšším LET. Převážně se jedná o sekundární částice s krátkým dosahem, ale mohou to být i primární ionty.
 
 Na obr.~\ref{fig:praktickaCast_mikroskop} je mikroskopický systém HSP-1000 (neúplný, chybí počítač, který systém řídí) pomocí něhož byl povrch detektorů nasnímán v dostatečném přiblížení.
 
@@ -56,7 +42,7 @@ Vyhodnocovat jsem započal analýzou stop v programu HspFit. Tento program sám 
 	\includegraphics[width=\textwidth]{praktickaCast_stopyNeniStopa2.jpg}
 	\caption{}
   \end{subfigure}
-  \caption{Příklad naskenovaných snímků jednoho detektoru. V (a) jsou vidět normální stopy, v (b) a (c) naopak červené šipky ukazují na poškození materiálu, která nevznikla působením ionizujícího záření.}
+  \caption{Příklad naskenovaných snímků jednoho detektoru. Velikost snímků je $1000\times\nobreak500$~px ($350\times\nobreak175$~$\mu$m). V (a) jsou vidět normální stopy, v (b) a (c) naopak červené šipky ukazují na poškození materiálu, která nevznikla působením ionizujícího záření.}
   \label{fig:praktickaCast_stopy}
 \end{figure}
 \begin{figure}[ht]
@@ -73,16 +59,16 @@ Vyhodnocovat jsem započal analýzou stop v programu HspFit. Tento program sám 
   \label{fig:praktickaCast_stopyPoskozeni}
 \end{figure}
 
-V obr. \ref{fig:praktickaCast_stopy} jsou uvedeny jednotlivé snímky z povrchu náhodně vybraného detektoru. V (a) je snímek, který obsahuje čisté stopy; v (b) ukazuje červená šipka poškození materiálu nepocházející od ozáření ionizujícím zářením, které by mohl neznalý uživatel vyhodnotit jako vícero stop; v (c) taktéž ukazuje červená šipka poškození materiálu jiného charakteru. Obr.~\ref{fig:praktickaCast_stopyPoskozeni} pak ukazuje snímky, na nichž je naskenována plocha, která byla fyzicky znehodnocena člověkem vyrytím tří křížků. Ty představují referenční body. 
+V obr. \ref{fig:praktickaCast_stopy} jsou uvedeny jednotlivé snímky z povrchu náhodně vybraného detektoru. V (a) je snímek, který obsahuje čisté stopy; v (b) ukazuje červená šipka poškození materiálu nepocházející od ozáření ionizujícím zářením, které by mohl neznalý uživatel vyhodnotit jako vícero stop; v (c) ukazuje červená šipka poškození materiálu jiného charakteru. Obr.~\ref{fig:praktickaCast_stopyPoskozeni} pak ukazuje snímky, na nichž je naskenována plocha, která byla fyzicky znehodnocena člověkem vyrytím tří křížků. Ty představují referenční body. 
 
-Osy všech elips byly spolu s dalšími parametry fitů (např. sklon elipsy) uloženy v souboru s příponou .nap. Tato data byla zpracována skriptem napsaném v programovacím jazyce Python, jehož výstupem jsou tři soubory. První soubor obsahuje údaje o poloze stopy, osách fitované elipsy, poměru leptacích rychlostí~$V$, korekčním součiniteli~$k_{\theta}$, lineárním přenosu energie~$\LET$, dávce a dávkovém ekvivalentu každé stopy. Druhý soubor obsahuje celkovou dávku a dávkový ekvivalent, které se absorbovaly v detektoru i s jejich příkony. Třetí soubor obsahuje data potřebná k vytvoření diferenciálních~$\LET$ spekter; z těchto dat jsem pomocí programu Gnuplot vytvořil~$\LET$ spektra (obr.~\ref{fig:praktickaCast_LETcetnost}, \ref{fig:praktickaCast_LETfluence},
+Osy všech elips byly spolu s dalšími parametry fitů (souřadnice stopy, plocha stopy, sklon elipsy apod.) uloženy v souboru s příponou .nap. Tato data byla zpracována skriptem napsaném v programovacím jazyce Python, jehož výstupem jsou tři soubory. První soubor obsahuje údaje o poloze stopy, osách fitované elipsy, poměru leptacích rychlostí~$V$, korekčním součiniteli~$k_{\theta}$, lineárním přenosu energie~$\LET$, dávce a dávkovém ekvivalentu každé stopy. Druhý soubor obsahuje celkovou dávku a dávkový ekvivalent, které se absorbovaly v detektoru i s jejich příkony. Třetí soubor obsahuje data potřebná k vytvoření diferenciálních~$\LET$ spekter; z těchto dat jsem pomocí programu Gnuplot vytvořil~$\LET$ spektra (obr.~\ref{fig:praktickaCast_LETcetnost}, \ref{fig:praktickaCast_LETfluence},
 \ref{fig:praktickaCast_LETdavka} a \ref{fig:praktickaCast_LETdavkEkvivalent}). Skript vypočítává pro každou částici $V$ z hodnot $a,b$ (vztah \eqref{eq:pomerLepRychlosti}, tloušťka odleptané vrstvy je $7,5$
 $\mu$m) a následně~$\LET$ dané částice z $V$ pomocí kalibrační křivky pro TASTRAK leptaný 6 hodin
 \begin{align}
   \LET(V) &= -99,8424+125,00172  V-15,28166  V^2+2,04636  V^3\,,\label{eq:kalibracniKrivkaSestHod}
   %\LET(V) &= -96,35071+114,90343  V-7,77194  V^2+1,27248  V^3\quad\text{(15 hod)},\label{eq:kalibracniKrivkaPatnactHod}
 \end{align}
-kde $\LET$ vychází v keV/$\mu$m; závislost byla přebrána z \cite{ssntd}. Kalibrační křivka je také k nahlédnutí na obr. \ref{fig:praktickaCast_kalibracniKrivky}. Kvůli jejímu rozsahu byly z dalšího vyhodnocování vyloučeny stopy s $\LET>1000$ keV/$\mu$.
+kde $\LET$ vychází v keV/$\mu$m; závislost byla přebrána z \cite{ssntd}. Kalibrační křivka je také k nahlédnutí na obr. \ref{fig:praktickaCast_kalibracniKrivky} (obrázek obsahuje i kalibrační křivku pro TASTRAK leptaný 15 hodin). Kvůli jejímu rozsahu byly z dalšího vyhodnocování vyloučeny stopy s $\LET>\nobreak1000$~keV/$\mu$.
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.7\textwidth]{praktickaCast_kalibracniKrivky.jpg}
@@ -93,9 +79,9 @@ Z $\LET$ všech částic jsou dále vypočítány dávka a dávkový ekvivalent 
 
 %Tab. \ref{tab:praktickaCast_davkyVysledky} obsahuje hledané celkové dávky a dávkové ekvivalenty; do vyhodnocení nebyly zahrnuty stopy s $\LET>1000$ (kvůli rozsahu kalibrační křivky). Na obr. \ref{fig:praktickaCast_LETspektra} jsou $\LET$ spektra získaná z vyhodnocených detektorů.
 
-Původní Python skript, který jsem obdržel od vedoucí práce, neposkytoval data pro $\LET$ spektra a nevypočítával $\dot{D},\dot{H}$. Pro tyto účely jsem ho musel dopsat. 
+Původní Python skript byl neúplný, nepočítal $\LET$ spektra, $\dot{D}$ a $\dot{H}$. Pro tyto účely jsem ho musel dopsat. Celý tento skript je v příloze~\ref{sec:priloha_skript}. 
  
-V tab. \ref{tab:praktickaCast_analyzovanaPlocha} je velikost analyzované plochy a počet analyzovaných stop všech tří detektorů.
+V tab. \ref{tab:praktickaCast_analyzovanaPlocha} je velikost analyzované plochy a počet analyzovaných stop všech tří detektorů. Nejmenší určený $\LET$ je roven $16,6$ keV/$\mu$m (u prvního detektoru), naopak největší určený $LET$ je roven $977,9$ keV/$\mu$m (u třetího detektoru). 
 \begin{table}[H]
   \centering
   \caption{Velikost analyzované plochy a počet analyzovaných stop všech tří detektorů.}
@@ -112,7 +98,7 @@ V tab. \ref{tab:praktickaCast_analyzovanaPlocha} je velikost analyzované plochy
 \end{table}
 \begin{table}[h]
   \centering
-  \caption{Celkové dávky $D$, dávkové ekvivalenty $H$ a příkony $\dot{D},\dot{H}$ určené vyhodnocovanými detektory (doba měření=180 dní). $Q$ je průměrný jakostní faktor záření.}
+  \caption{Celkové dávky $D$, dávkové ekvivalenty $H$ a příkony $\dot{D},\dot{H}$ určené vyhodnocovanými detektory (doba měření=186 dní). $Q$ je průměrný jakostní faktor záření.}
   \label{tab:praktickaCast_davkyVysledky}
   \begin{tabular}{llllll}
 	\toprule
@@ -121,14 +107,14 @@ V tab. \ref{tab:praktickaCast_analyzovanaPlocha} je velikost analyzované plochy
 	%1&5,31501450067&88,2754298605\\
 	%2&5,068573344&92,5692674847\\
 	%3&4,31129592097&75,4191405129\\
-	1&$5\pm1$&$90\pm20$&$30\pm6$&$500\pm100$&$17\pm5$\\
-	2&$5\pm1$&$90\pm20$&$28\pm6$&$500\pm100$&$18\pm5$\\
-	3&$4\pm1$&$80\pm20$&$24\pm5$&$400\pm100$&$17\pm5$\\
+	1&$5\pm1$&$90\pm20$&$29\pm6$&$470\pm90$&$17\pm5$\\
+	2&$5\pm1$&$90\pm20$&$27\pm5$&$500\pm100$&$18\pm5$\\
+	3&$4\pm1$&$80\pm20$&$23\pm5$&$410\pm80$&$17\pm5$\\
 	\bottomrule
   \end{tabular}
 \end{table}
 
-Tab. \ref{tab:praktickaCast_davkyVysledky} obsahuje hledané celkové dávky $D$ a dávkové ekvivalenty $H$ i s jejich příkony (detektory byly umístěny na pozicích 180 dní); do vyhodnocení nebyly zahrnuty stopy s $\LET>1000$ (kvůli rozsahu kalibrační křivky). Ze známosti $D$ a $H$ lze také určit kvalitu záření $Q=H/D$. Určení nepřesností je probráno dále v textu.
+Tab. \ref{tab:praktickaCast_davkyVysledky} obsahuje hledané celkové dávky $D$ a dávkové ekvivalenty $H$ i s jejich příkony (detektory byly ozařovány 186 dní). Ze známosti $D$ a $H$ bylo také možné určit kvalitu záření $Q=H/D$. Určení nepřesností je probráno dále v textu.
 
 Na obrázcích \ref{fig:praktickaCast_LETcetnost}, \ref{fig:praktickaCast_LETfluence}, \ref{fig:praktickaCast_LETdavka} a \ref{fig:praktickaCast_LETdavkEkvivalent} jsou mnou vytvořená diferenciální $\LET$ spektra pro různé veličiny; $\LET$ intervaly byly zvoleny tak, aby byly na logaritmické ose ekvidistantní. První spektrum zobrazuje počet stop (detekovaných částic) spadnuvších do jednotlivých $\LET$ intervalů. Třetí, resp. čtvrté spektrum zobrazuje, jakou dávkou, resp. dávkovým ekvivalentem přispěly částice v daném $\LET$ intervalu do celkově obdržené dávky, resp. dávkového ekvivalentu. Druhé spektrum znázorňuje diferenciální fluenci $\Phi$ částic s $\LET$ v daném intervalu; $\Phi$ je definována vztahem
 \begin{equation}
@@ -142,7 +128,7 @@ kde $dN$ je počet částic, které dopadly na kouli s příčným řezem o obsa
 \end{equation}
 kde $N_i$ je počet stop s $\LET$ v příslušném intervalu, $A$ je detekční plocha, $\cos^2\theta_{k,i}=\frac{V^2_i-1}{V^2_i}$ a $V_i$ je průměrná leptací rychlost uvažovaných stop \cite{ssntd}.
 
-$\LET$ spektra jsou zatížena nepřesností, která pochází např. z nehomogenity materiálu detektoru a jeho tloušťky, rozdílů v koncentraci leptacího roztoku a v teplotách, nedokonalého smytí hydroxidu po leptání, výkonem vyhodnocovacího operátora~\cite{nejistoty}. Nechť $\Delta n$ je počet částic v jednom z $\LET$ intervalů. Lze uvažovat model \cite{nejistoty}, kdy nepřesnost určení $\Delta n$ pochází ze tří zdrojů:
+$\LET$ je zatížen nepřesností, která pochází např. z nehomogenity materiálu detektoru a jeho tloušťky, rozdílů v koncentraci leptacího roztoku a v teplotách během leptání, nedokonalého smytí hydroxidu po leptání, výkonem vyhodnocovacího operátora~\cite{nejistoty}. Nechť $\Delta n$ je počet částic v jednom z $\LET$ intervalů. Lze uvažovat model \cite{nejistoty}, kdy nepřesnost určení $\Delta n$ pochází ze tří zdrojů:
 \begin{itemize}
   \item nepřesnost $u_1(\Delta n)$ spojená s náhodností detekce částice, která má Poissonovo rozdělení, tj. $u_1=\sqrt{\Delta n}$;
   \item nepřesnost $u_2(\Delta n)$ vyplyvající z nepřesnosti kalibrační křivky, tj. závislosti $\LET(V)$;
@@ -155,7 +141,7 @@ Velikost $u_2$ jde zjistit pomocí známého vztahu pro výpočet nepřesností 
 \end{equation}
 který je pro zjednodušení uveden pro funkci $f$ závislou pouze na dvou veličinách $x,y$, obecně jich může být více; $u(x), u(y)$ jsou chyby veličin $x,y$; $u(x,y)$ je jejich kovariance. Tedy pro $u_2$
 \begin{equation}
-  u_2(\Delta n)\approx\frac{\Delta n}{\Delta\LET}u(\LET)\,,
+  u_2(\Delta n)=\frac{\Delta n}{\Delta\LET}u(\LET)\,,
   \label{eq:praktickaCast_u2}
 \end{equation}
 kde $\Delta\LET$ je délka uvažovaného intervalu a $u(\LET)$ je nepřesnost určení lineárního přenosu energie z kalibrační křivky, která se zjistí také použitím vztahu \eqref{eq:praktickaCast_neprimaChyba} pro $\LET(V)$; diferenciály jsou z důvodu jednoduchosti a praktičnosti aproximovány na $\Delta n, \Delta\LET$. Poměr leptacích rychlostí závisí na $a,b,d$, tzn. na osách elipsy (stopy) a tloušťce odleptané vrstvy. Chyba $V$ se určí zase podle vztahu \eqref{eq:praktickaCast_neprimaChyba} pro $V(a,b,d)$. Kovariance $u(a,d)$ a $u(b,d)$ jsou brány jako nulové, jelikož se nedají snadno určit; vzhledem k zápornosti příslušných parciálních derivací tímto krokem $u(V)$ nadhodnocujeme. Určení $u(a), u(b), u(a,b), u(d)$ spolu s tzv. očekávanými hodnotami $a,b,d$ je podrobně
@@ -163,19 +149,24 @@ rozebráno v~\cite{nejistoty}.
 
 Třetí složka nejistot $u_3$ se dá určit jen v některých situacích, viz~\cite{nejistoty}.
 
-Chyba určení dávky $D_i$ od $N_i$ částic s lineárním přenosem energie $\LET_i$ se zjistí aplikací vztahu \eqref{eq:praktickaCast_neprimaChyba} pro $D_i(\LET_i,N_i)$, tedy 
+Chyba určení dávky $D_i$ od $N_i$ částic s lineárním přenosem energie v $i$-tém $\LET$ intervalu ($\LET_i$ je střed tohoto intervalu) se zjistí aplikací vztahu \eqref{eq:praktickaCast_neprimaChyba} pro $D_i(\LET_i,N_i)$, tedy 
 \begin{equation}
   u(D_i)=\sqrt{\left(\frac{\partial D_i}{\partial\LET_i}u(\LET_i)\right)^2+\left(\frac{\partial D_i}{\partial N_i}u(N_i)\right)^2}\,,
   \label{eq:praktickaCast_chybaDavka}
 \end{equation}
-kde vzhledem k Poissonovu rozdělení náhodné veličiny $N_i$ je $u(N_i)=\sqrt{N_i}$,~\cite{thesisKPBrabcova}; $u(\LET_i)$ se určí způsobem popsaným výše. Nepřesnost dávkového ekvivalentu se zjistí obdobně.
+kde vzhledem k Poissonovu rozdělení náhodné veličiny $N_i$ je $u(N_i)=\sqrt{N_i}$,~\cite{thesisKPBrabcova}; $u(\LET_i)$ se určí způsobem popsaným výše. Nejistota celkové dávky $D$ se určí vztahem
+\begin{equation}
+  u(D)=\sqrt{\sum_i u^2(D_i)}\,,
+  \label{eq:praktickaCast_chybaCelkDavka}
+\end{equation}
+kde $i$ běží přes všechny dílčí dávky. Nepřesnost dávkového ekvivalentu se zjistí obdobně.
 
-Do $\LET$ spekter jsem nepřesnosti nezahrnul. Relativní chyba $D$ a $H$ je zhruba 20~\%~\cite{nejistoty}.
+Aby $\LET$ spektra na obrázcích~\ref{fig:praktickaCast_LETcetnost}, \ref{fig:praktickaCast_LETfluence}, \ref{fig:praktickaCast_LETdavka} a \ref{fig:praktickaCast_LETdavkEkvivalent} byla přehlednější, tak jsem do nich nezahrnul nepřesnosti. Relativní chyba $D$ a $H$ je zhruba 20~\%~\cite{nejistoty}.
 \begin{figure}[H]
   \centering
 	\centering
 	\input{images/LETspektrumCetnost}
-	\caption{$\LET$ spektra vyhodnocených detektorů, na vertikální ose je počet stop v intervalu.}
+	\caption{$\LET$ spektra vyhodnocených detektorů, na vertikální ose je počet stop v daném $\LET$ intervalu.}
 	\label{fig:praktickaCast_LETcetnost}
 \end{figure}
 \begin{figure}[H]
@@ -199,31 +190,49 @@ Do $\LET$ spekter jsem nepřesnosti nezahrnul. Relativní chyba $D$ a $H$ je zhr
 	\caption{$\LET$ spektra detektorů pro dávkový ekvivalent.}
 	\label{fig:praktickaCast_LETdavkEkvivalent}
 \end{figure}
-\newpage
 \section{Diskuze}
-Ze spekter vidíme, že byly registrovány částice s $\LET\in[15;1000]$ keV/$\mu$m; dolní hranice je dána detekčním prahem TASTRAKu a horní hranice byla uměle nastavena s přihlédnutím k rozsahu kalibrační křivky. Nejpočetnější složku tvoří dle spektra~\ref{fig:praktickaCast_LETcetnost} stopy s $\LET$ v rozsahu 30 až 200 keV/$\mu$m. Ty odpovídají nejspíš protonům, které pocházejí z SAA nebo z interakcí neutronů s materiálem detektoru, a $\alpha$ částicím. Protony mají v CR-39 maximální $\LET$ kolem 80-90~keV/$\mu$m, $\alpha$ částice kolem 200~keV/$\mu$m~\cite{SRIM}. Stopy s nižším $\LET$ odpovídají iontům z primárního kosmického záření, stopy s vyšším $\LET$ odraženým jádrům O, C atd. Ze stejného spektra je také vidět, že bylo detekováno relativně málo částic s malým $\LET$ (mezi 20 a 30
-keV/$\mu$m). To je způsobeno kratší dobou leptání detektorů, po které nebyla většina stop s malým $\LET$ ještě odhalena. 
+Ze spekter vidíme, že byly registrovány částice s $\LET\in[15;1000]$ keV/$\mu$m; dolní hranice je dána detekčním prahem TASTRAKu a horní hranice byla uměle nastavena s přihlédnutím k rozsahu kalibrační křivky. Nejpočetnější složku tvoří dle spektra~\ref{fig:praktickaCast_LETcetnost} stopy s $\LET$ v rozsahu 30 až 200 keV/$\mu$m. Ty odpovídají nejspíš protonům, které pocházejí z SAA nebo z interakcí neutronů s materiálem detektoru, a $\alpha$ částicím. Protony mají ve vodě maximální $\LET$ kolem 80-90~keV/$\mu$m, $\alpha$ částice kolem 200~keV/$\mu$m~\cite{SRIM}. Stopy s nižším $\LET$ mohou odpovídat sekundárním elektronům (max. $\LET$ ve vodě cca 30~keV/$\mu$m) a iontům z primárního kosmického záření, stopy s vyšším $\LET$ odpovídají hlavně odraženým jádrům O, C atd. Ze stejného spektra je
+také vidět, že bylo detekováno relativně málo částic s malým $\LET$ (mezi 20 a 30 keV/$\mu$m). To je způsobeno kratší dobou leptání detektorů, po které nebyla většina stop s malým $\LET$ ještě odhalena. 
 
-Na obr. \ref{fig:praktickaCast_LETcetnost} a v tab. \ref{tab:praktickaCast_analyzovanaPlocha} je vidět, že v prvním detektoru bylo analyzováno nejvíce stop a že tento nadbytek oproti ostatním detektorům tvoří stopy s nižším $\LET$. Toto může být způsobeno tím, že jsem při ručním analyzování stop prvního detektoru připustil do dalších výpočtů i tzv. přeleptané stopy. To jsou stopy od částic s krátkým dosahem (sekundárních částic), pro které byla doba leptání příliš dlouhá, takže započalo jejich odstraňování, ale ne tak ne tak dlouhá, aby byly odstraněny úplně. Přeleptané stopy neposkytují žádnou relevantní informaci.
+Na obr. \ref{fig:praktickaCast_LETcetnost} a v tab. \ref{tab:praktickaCast_analyzovanaPlocha} je vidět, že v prvním detektoru bylo analyzováno nejvíce stop a že tento nadbytek oproti ostatním detektorům tvoří stopy s nižším $\LET$. Toto může být způsobeno tím, že jsem při ručním analyzování stop prvního detektoru připustil do dalších výpočtů i tzv. přeleptané stopy. Přeleptaná stopa je stopa od částice s krátkým dosahem (sekundární částice), která byla v průběhu leptání vyleptána až do konce dráhy původní částice v materiálu, a poté leptání stopy pokračovalo do všech stran, tj. probíhalo zaoblování stopy. Důsledkem je rozostření jejího okraje, což znemožňuje fitovat stopu elipsou. To je důvod, proč taková stopa neposkytuje žádnou relevantní informaci.
 
-Spektra pro dávku a dávkový příkon názorně ukazují rozdíl mezi těmito dvěma veličinami. Tab.~\ref{tab:praktickaCast_relPrispevkyDavka} zobrazuje relativní příspěvky k $D$ a $H$ od částic s různým $\LET$.
+Spektra pro dávku a dávkový ekvivalent názorně ukazují rozdíl mezi těmito dvěma veličinami. Dávka vyjadřuje množství deponované energie v jednotce hmotnosti, dávk. ekvivalent je dávka přenásobená jakostním činitelem $Q(\LET)$, který vyjadřuje biologický účinek záření. Označme $D_i$, resp. $H_i$ dílčí dávku, resp. dílčí dávk. ekvivalent od částic s $\LET$ v daném $\LET$ intervalu. Na obr.~\ref{fig:praktickaCast_LETdavka} pozorujeme, že $D_i$ nejprve v závislosti na zvyšujícím se $\LET$ roste a přibližně u 100 keV/$\mu$m nabývá maxima; za touto hodnotu dávka značně fluktuuje, ale dá se říct, že pozvolně klesá. $H_i$ (obr.~\ref{fig:praktickaCast_LETdavkEkvivalent}) nabývá maxima také u 100 keV/$\mu$m, ale jeho růst, resp. pokles je mnohem strmější. To odpovídá faktu, že $Q$ je spojitou funkcí $\LET$,
+která nabývá maxima v 100 keV/$\mu$m, tj. částice s $\LET=\nobreak100$~keV/$\mu$m způsobují největší poškození organismu. Dále lze pozorovat, že přenásobením $Q$ bylo spektrum vyhlazeno (ve smyslu odstranění fluktuací). Pro znázornění rozdílnosti strmostí růstů a poklesů ve spekter jsou v tab.~\ref{tab:praktickaCast_relPrispevkyDavka} zobrazeny pro třetí detektor relativní příspěvky k celkové dávce a dávk. ekvivalentu od částic s $\LET$ v daném $\LET$ rozsahu.
 \begin{table}[ht]
   \centering
-  \caption{Relativní příspěvky zaokrouhlené na jednotky k celkové dávce $D$, resp. k celkovému dávkovému ekvivalentu $H$ od částic z daného $\LET$ intervalu.}
+  \caption{Relativní příspěvky zaokrouhlené na jednotky v procentech k celkové dávce $D$, resp. k celkovému dávkovému ekvivalentu $H$ od částic z daného $\LET$ rozsahu pro třetí detektor.}
   \label{tab:praktickaCast_relPrispevkyDavka}
   \begin{tabular}{lll}
 	\toprule
 	$\LET$ [keV/$\mu$m]& $D_{\text{rel}}$ [-]&$H_{\text{rel}}$ [-]\\
 	\midrule
-	$[22;33]$&9 \%&3 \%\\
-	$[110;200]$&20 \%&28 \%\\
-	$[546;812]$&8 \%&5 \%\\
+	$[15;33]$&11 \%&3 \%\\
+	$[33;200]$&55 \%&68 \%\\
+	$[200;992]$&34 \%&29 \%\\
 	\bottomrule
   \end{tabular}
 \end{table}
 
-Dávkové příkony určené z vyhodnocených TED (tab.~\ref{tab:praktickaCast_davkyVysledky}) jsou mnohem menší než dávkové příkony určené z TLD (viz. oddíl \ref{sec:dosis_vysledky}; lze předpokládat, že $\dot{D}$ z osmé sady budou vycházet alespoň řádově jako $\dot{D}$ v předchozích sadách). Je to tím, že převážná část absorbované dávky pochází od částic s $\LET$ menším než je detekční práh TASTRAKu. Podobné rozdíly mezi dávkovými příkony od TLD a TED byly naměřeny i v jiných experimentech, např.~\cite{passDetectors,ambrozova_dvaExperimenty, japonsky}.
+Dávkové příkony určené z vyhodnocených TED (tab.~\ref{tab:praktickaCast_davkyVysledky}) jsou mnohem menší než dávkové příkony určené z TLD (viz. oddíl \ref{sec:dosis_vysledky}; lze předpokládat, že $\dot{D}$ z osmé sady budou vycházet alespoň řádově jako $\dot{D}$ v předchozích sadách). Je to tím, že převážná část absorbované dávky pochází od částic s $\LET$ menším než je detekční práh TASTRAKu. Na druhou stranu příkony dávk. ekvivalentů od TED a od TLD jsou stejného řádu, což je způsobeno větší biologickou účinností částic s vyšším $\LET$. Podobné rozdíly mezi dávkovými příkony od TLD a TED byly naměřeny i v jiných experimentech, např.~\cite{passDetectors,ambrozova_dvaExperimenty, japonsky}, zde uvedeme data z~\cite{passDetectors}. V tab.~\ref{tab:praktickaCast_rozdilyJinyExp} jsou uvedena data naměřená v rámci experimentu MATROSHKA-R v
+ruském modulu Zvezda v roce 2009. Lze pozorovat, že dávkové příkony od TED jsou přibližně 10-krát menší než od TLD. Oproti tomu jsou příkony dávk. ekvivalentů od TED mírně vyšší než od TLD. To poukazuje na důležitost monitorování částic s vyšším $\LET$ i přes fakt, že tvoří jen malý zlomek celkové dávky.
+\begin{table}[h]
+  \centering
+  \begin{tabular}{lllll}
+	\toprule
+	SPD&$\dot{D}_{\text{TLD}}$ $\mu$Gy/den&$\dot{D}_{\text{TED}}$ $\mu$Gy/den&$\dot{H}_{\text{TED}}$ $\mu$Sv/den&$Q$ [-]\\
+	\midrule
+	3&$368\pm26$&$41\pm4$&$550\pm62$&$13,5$\\
+	4&$387\pm27$&$41\pm4$&$437\pm49$&$10,8$\\
+	5&$321\pm22$&$34\pm4$&$396\pm46$&$11,5$\\
+	6&$301\pm21$&$28\pm3$&$348\pm42$&$12,3$\\
+	\bottomrule
+  \end{tabular}
+  \caption{Data z experimentu MATROSHKA-R naměřená v modulu Zvezda v roce 2009~\cite{passDetectors}. Příkony dávk. ekvivalentů od TLD jsou číselně rovny příslušným $\dot{D}_{\text{TLD}}$ $(Q(\LET<\nobreak10\ \mathrm{keV/\mu m})=1)$.}
+  \label{tab:praktickaCast_rozdilyJinyExp}
+\end{table}
+Je tedy zřejmé, že mnou naměřená data odpovídají obvyklému trendu. Jejich bližší srovnání s daty z tab.~\ref{tab:praktickaCast_rozdilyJinyExp} není možné vzhledem k tomu, že byla naměřena v jinou dobu jiným materiálem, který byl vyhodnocován za jiných podmínek. 
 
-Velikost dávkového příkonu vyhodnoceného detektoru z PDP3 je menší než velikost dávkových příkonů z vyhodnocených detektorů z PDP1,2. Tento rozdíl lze pozorovat i u dávkových příkonů z luminiscenčních detektorů (obr.~\ref{fig:dosis_vysl_jednaSada}). Vyšší dávkový příkon z PDP1 než z PDP2 v případě vyhodnocených detektorů je dán vyšším počtem analyzovaných stop prvního detektoru (viz dva odstavce výše).
+Velikost dávkového příkonu vyhodnoceného detektoru z PDP3 je menší než velikost dávkových příkonů z vyhodnocených detektorů z PDP1,2. Tento rozdíl lze pozorovat i u dávkových příkonů z luminiscenčních detektorů (obr.~\ref{fig:dosis_vysl_jednaSada}). Vyšší dávkový příkon z PDP1 než z PDP2 v případě vyhodnocených detektorů je dán vyšším počtem analyzovaných stop prvního detektoru (viz druhý odstavec tohoto oddílu).
 
-Vyhodnocování bude pokračovat druhým leptáním, při kterém se zobrazí částice s menším $\LET$ delším dosahem. Bude leptána stejná plocha a díky referenčním bodům (obr.~\ref{fig:praktickaCast_stopyPoskozeni}) bude možné rozlišit jednotlivé stopy od sekundárních a primárních částic. Stopy od sekundárních částic, které byly zřetelné po prvním leptání, budou nyní odleptány, případně přeleptány, a naopak se zobrazí předtím neviděné stopy od primárních částic, které mají dlouhý dosah. Vypočtou se dávky a dávkové ekvivalenty nových stop a poté se připočtou k $D$ a $H$ určené už při prvním leptání. Nakonec se kombinací dat z TLD a TED postupem popsaným v oddíle~\ref{sec:detektory_kombinace} určí celkové dávkové příkony a dávkové ekvivalenty.
+Vyhodnocování bude pokračovat druhým leptáním, při kterém se zobrazí částice s menším $\LET$ a delším dosahem. Bude leptán stejný detektor a vyhodnocována stejná plocha (skrze referenční body, viz obr.~\ref{fig:praktickaCast_stopyPoskozeni}) a tím bude možné rozlišit jednotlivé stopy od sekundárních a primárních částic. Stopy od sekundárních částic, které byly zřetelné po prvním leptání, mohou být nyní odleptány, případně přeleptány, a naopak se zobrazí předtím neviděné stopy od primárních částic, které mají dlouhý dosah. Vypočtou se dávky a dávkové ekvivalenty nových stop a poté se připočtou k $D$ a $H$ určené už při prvním leptání. Nakonec se kombinací dat z TLD a TED postupem popsaným v oddíle~\ref{sec:detektory_kombinace} určí celkové dávkové příkony a dávkové
+ekvivalenty. Výsledky budou srovnány s výsledky jiných účastníků DOSIS3D.
