--- a/tabulky, grafy/TLD_RR.tex
+++ b/tabulky, grafy/TLD_RR.tex
@@ -82,31 +82,35 @@
 \begin{picture}(7936.00,5102.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(814,704){\makebox(0,0)[r]{\strut{}0.2}}%
+      \put(814,704){\makebox(0,0)[r]{\strut{}0.1}}%
       \csname LTb\endcsname%
-      \put(814,1163){\makebox(0,0)[r]{\strut{}0.3}}%
+      \put(814,1117){\makebox(0,0)[r]{\strut{}0.2}}%
       \csname LTb\endcsname%
-      \put(814,1622){\makebox(0,0)[r]{\strut{}0.4}}%
+      \put(814,1531){\makebox(0,0)[r]{\strut{}0.3}}%
       \csname LTb\endcsname%
-      \put(814,2082){\makebox(0,0)[r]{\strut{}0.5}}%
+      \put(814,1944){\makebox(0,0)[r]{\strut{}0.4}}%
       \csname LTb\endcsname%
-      \put(814,2541){\makebox(0,0)[r]{\strut{}0.6}}%
+      \put(814,2357){\makebox(0,0)[r]{\strut{}0.5}}%
       \csname LTb\endcsname%
-      \put(814,3000){\makebox(0,0)[r]{\strut{}0.7}}%
+      \put(814,2771){\makebox(0,0)[r]{\strut{}0.6}}%
       \csname LTb\endcsname%
-      \put(814,3459){\makebox(0,0)[r]{\strut{}0.8}}%
+      \put(814,3184){\makebox(0,0)[r]{\strut{}0.7}}%
       \csname LTb\endcsname%
-      \put(814,3919){\makebox(0,0)[r]{\strut{}0.9}}%
+      \put(814,3597){\makebox(0,0)[r]{\strut{}0.8}}%
       \csname LTb\endcsname%
-      \put(814,4378){\makebox(0,0)[r]{\strut{}1.0}}%
+      \put(814,4010){\makebox(0,0)[r]{\strut{}0.9}}%
+      \csname LTb\endcsname%
+      \put(814,4424){\makebox(0,0)[r]{\strut{}1.0}}%
       \csname LTb\endcsname%
       \put(814,4837){\makebox(0,0)[r]{\strut{}1.1}}%
       \csname LTb\endcsname%
-      \put(946,484){\makebox(0,0){\strut{}$1$}}%
+      \put(946,484){\makebox(0,0){\strut{}$0.1$}}%
       \csname LTb\endcsname%
-      \put(3144,484){\makebox(0,0){\strut{}$10$}}%
+      \put(2594,484){\makebox(0,0){\strut{}$1$}}%
       \csname LTb\endcsname%
-      \put(5341,484){\makebox(0,0){\strut{}$100$}}%
+      \put(4243,484){\makebox(0,0){\strut{}$10$}}%
+      \csname LTb\endcsname%
+      \put(5891,484){\makebox(0,0){\strut{}$100$}}%
       \csname LTb\endcsname%
       \put(7539,484){\makebox(0,0){\strut{}$1000$}}%
     }%
